# judge-core

./: .gitlab-ci.yml  CMakeCache.txt  CMakeLists.txt  Jenkinsfile  Makefile  README.md  build.sh  build_plugin.sh  cmake_install.cmake  judge_core  sonar-project.properties
src/: main.c
src/command/: command_args.h  command_handler.c  command_handler.h
src/data/: config.c  config.h  result.c  result.h
src/execute/: answer_code.h  execute_handler.c  execute_handler.h
src/exit/: exit_handler.c  exit_handler.h  exit_status_code.h
src/kill/: kill.c  kill.h
src/plugin/: plugin_handler.c  plugin_handler.h
src/seccomp/: seccomp_handler.c  seccomp_handler.h
src/thread/: thread_handler.c  thread_handler.h
